# trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  weights.json
scripts/: debug_kis_overseas_daily.py  debug_kis_overseas_response.py  debug_kis_response.py  optimize_weights.py  run_backtest.py  run_live.py  smoke_test_kis.py  smoke_test_kis_order.py
src/trading/: __init__.py  config.py
src/trading/backtest/: engine.py  metrics.py  report.py
src/trading/brokers/: interfaces.py  kis_broker.py  kis_exchange_codes.py  kis_overseas_broker.py  kis_session.py  paper_broker.py
src/trading/data/: csv_provider.py  interfaces.py  kis_overseas_provider.py  kis_provider.py  synthetic.py
src/trading/execution/: live_runner.py
src/trading/filters/: exclusion.py
src/trading/indicators/: technical.py
src/trading/market_regime/: classifier.py
src/trading/ml/: dataset.py  optimizer.py
src/trading/risk/: manager.py
src/trading/scoring/: engine.py  features.py
src/trading/strategies/: base.py  breakout.py  pullback.py  selector.py  trend_pullback.py
src/trading/utils/: time_utils.py
tests/: test_backtest_engine.py  test_filters.py  test_kis_brokers.py  test_kis_overseas_provider.py  test_market_regime.py  test_ml_optimizer.py  test_multi_market.py  test_risk.py  test_scoring.py  test_strategies.py
